<resources>
    <string name="app_name">WhereAmI</string>
    <string name="title_main_activity">WhereAmI</string>
    <string name="button_training_title">TRAIN</string>
    <string name="button_sense_title">SENSE</string>
    <string name="button_reset_title">RESET</string>
    <string name="button_save_title">SAVE</string>
    <string name="button_back_title">BACK</string>
    <string name="button_training_submit">Add training sample</string>

    <string name="title_training">TRAINING</string>
    <string name="title_testing">TESTING</string>
    <string name="training_label_cell">CURRENT CELL</string>

    <string name="textview_sense_title">Current Location</string>
    <string name="textview_activity_title">Current Activity:</string>
    <string name="training_label_activity">Current Activity</string>
    <string name="textview_sense_to_see">Sense to detect location and activity!</string>
    <string name="textview_sense_results">Results</string>
    <string name="textview_label_warning_change">* Changing will cause the training samples to be removed</string>
    <string name="textview_stats">Training Stats</string>

    <string-array name="cell_array">
        <item>Cell A</item>
        <item>Cell B</item>
        <item>Cell C</item>
        <item>Cell D</item>
        <item>Cell E</item>
        <item>Cell F</item>
        <item>Cell G</item>
        <item>Cell H</item>
    </string-array>
    <string-array name="activity_array">
        <item>Walking</item>
        <item>Standing</item>
        <item>Being crazy</item>
    </string-array>
    <string-array name="method_array">
        <item>KNN</item>
        <item>Bayesian Filters</item>
        <item>Particle Filters</item>
    </string-array>
    <string-array name="precision_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="textview_label_method">Method</string>
    <string name="textview_label_precision">Precision</string>
    <string name="textview_label_reset">Reset training data</string>
    <string name="textview_label_total_samples">Total training samples</string>

    <string name="dialog_reset_title">Are u sure?</string>
    <string name="dialog_reset_message">Do you want to reset all data?</string>
    <string name="confirm_add_training_text">Training sample added!</string>
    <string name="error_add_training_text">An error occurred, please try again!</string>
    <string name="confirm_reset_training_text">Samples successfully removed!</string>
    <string name="confirm_save_settings_text">Settings successfully saved!</string>
    <string name="error_not_enough_samples">At least 9 samples required</string>
    <string name="confirm_wifi_receiver_completed">WiFi Receiver completed</string>

    <string name="view_home_title">WhereAmI</string>
    <string name="view_training_title">Training</string>
    <string name="view_settings_title">Settings</string>
    <string name="view_sense_title">Sense</string>
</resources>
