<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textview_label_sense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/textview_sense_to_see"
            android:textColor="@color/colorLight"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:drawableBottom="@color/colorLight"/>


        <LinearLayout
            android:id="@+id/column_title_row"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_label_sense"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/textview_label_cell"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_sense_title"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textview_label_activity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/textview_activity_title"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column_title_row_2"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/column_title_row"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/left_column"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <GridLayout
                    android:id="@+id/gridlayout_left_cells"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/right_column"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <GridLayout
                    android:id="@+id/gridlayout_right_cells"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_sense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_training"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button_sense_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_training"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/button_training_title"
            android:fontFamily="sans-serif-thin"
            android:textSize="24sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>