<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_row_column"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/column_title_row"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_label_cell"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_sense_title"
                    android:textColor="@color/colorLight"
                    android:textStyle="italic"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/textview_label_activity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/training_label_activity"
                    android:textColor="@color/colorLight"
                    android:textStyle="italic"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_row_column_2"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radiogroup_cells"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:minHeight="25dp" />

                <RadioGroup
                    android:id="@+id/radiogroup_activity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:minHeight="25dp"
                    android:textColor="@color/colorLight"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_add_training"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/linear_layout_row_column"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/button_training_submit"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textview_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_add_training"
            android:text="@string/textview_stats"
            android:layout_marginTop="10dp"
            android:background="@color/colorMuted"
            android:textColor="@color/colorLight"
            android:textAlignment="textStart"
            android:padding="10dp"
            android:textStyle="italic"/>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/textview_horizontal_line">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TableLayout
                android:id="@+id/table_samples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>